# Back-End-2025Team1

./: .env.example  .gitignore  API_TEST_REPORT_ZH.md  CHANGES_SUMMARY.md  README.md  app.py  app_py.html  check_test_mode.py  class_index.html  config.py  config_py.html  enable_test_mode.py  function_index.html  index.html  init_test_data.py  pyproject.toml  recover_py.html  status.json  test_mongodb_pat.py  z_0f6becadd386a092_retriever_py.html  z_277f9e560e1a3d5a_archive_utils_py.html  z_277f9e560e1a3d5a_exception_py.html  z_277f9e560e1a3d5a_problem_py.html  z_277f9e560e1a3d5a_test_case_py.html  z_6e2dbee8102cccb9_ai_vtuber_py.html  z_6e2dbee8102cccb9_announcement_py.html  z_6e2dbee8102cccb9_auth_py.html  z_6e2dbee8102cccb9_copycat_py.html  z_6e2dbee8102cccb9_course_py.html  z_6e2dbee8102cccb9_discussion_py.html  z_6e2dbee8102cccb9_health_py.html  z_6e2dbee8102cccb9_homework_py.html  z_6e2dbee8102cccb9_login_records_py.html  z_6e2dbee8102cccb9_pat_py.html  z_6e2dbee8102cccb9_post_py.html  z_6e2dbee8102cccb9_problem_io_py.html  z_6e2dbee8102cccb9_problem_py.html  z_6e2dbee8102cccb9_profile_py.html  z_6e2dbee8102cccb9_ranking_py.html  z_6e2dbee8102cccb9_submission_py.html  (+46 more)
manual-test-tool/: enable_test_mode.py  init_test_data.py  setup_trial_problem.py
model/: __init__.py  ai_vtuber.py  api.py  auth.py  copycat.py  course.py  discussion.py  homework.py  login_records.py  pat.py  post.py  problem.py  problem_io.py  profile.py  submission.py  trial_submission.py  user.py
mongo/: __init__.py  ai_vtuber.py  config.py  copycat_service.py  course.py  discussion.py  engine.py  login_records.py  pat.py  post.py  submission.py  user.py  utils.py
tests/: base_tester.py  conftest.py  test_ai_skin.py  (+30 more)
(+41 files in other folders)
