[project]
name = "normal-oj-web"
version = "0.1.0"
description = "Backend of Normal-OJ"
authors = []
readme = "README.md"
requires-python = "~=3.11"
license = "MPL-2.0"
dynamic = ["dependencies"]

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.1.1"
gunicorn = "^23.0.0"
mongoengine = "^0.29.1"
blinker = "^1.5"
PyJWT = "^2.5"
requests = "^2.32"
mosspy = "^1.0"
redis = "^4.4"
pymongo = "^4.5.0"
minio = "^7.2.15"
python-ulid = "^3.0.0"
pydantic = "^1.10.13"
# RAG dependencies (chromadb uses pydantic v1 compatible mode)
chromadb = "^0.4"  # Use 0.4.x for pydantic v1 compatibility

[tool.poetry]
requires-poetry = ">=2.0"
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^7.1"
pytest-xdist = "^3.6.1"
mongomock = "^4.2.0.post1"
pre-commit = "^4.2.0"
yapf = "^0.43"
fakeredis = "^1.9"
toml = "^0.10"
pytest-cov = "^3.0"
testcontainers = {extras = ["minio"], version = "^4.10.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    # Ignore mongoengine's uuidRepresentation warning
    "ignore:No uuidRepresentation is specified:DeprecationWarning:mongoengine",
    # Ignore mongoengine's json_options warning
    "ignore:No 'json_options' are specified:DeprecationWarning:mongoengine",
    # Ignore mongoengine's aggregate() signature warning
    "ignore:Calling .aggregate\\(\\) with un unpacked list:DeprecationWarning:mongoengine",
    # Ignore mongomock's datetime.utcnow() warning
    "ignore:datetime.datetime.utcnow\\(\\) is deprecated:DeprecationWarning:mongomock",
]
